--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,23 @@ body {
     flex-direction: row;
     gap: 20px;
 }
+
+.next-figures-contianer {
+    display: flex;
+    flex-direction: column;
+    min-width: 140px;
+    align-items: center;
+    gap: 20px;
+}
+
+.start-button {
+    width: 100%;
+    height: 24px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: cornflowerblue;
+    border-radius: 8px;
+    
+}
